--- a/src/index.html
+++ b/src/index.html
@@ -17,12 +17,12 @@
 <script>
   // Initialize Firebase
   var config = {
-    apiKey: "AIzaSyD-u3Itgz4-p3Kd9cDJCB3nCEfkQqg5q6o",
-    authDomain: "nn-angular-dd957.firebaseapp.com",
-    databaseURL: "https://nn-angular-dd957.firebaseio.com",
-    projectId: "nn-angular-dd957",
-    storageBucket: "nn-angular-dd957.appspot.com",
-    messagingSenderId: "298926149546"
+    apiKey: "",
+    authDomain: "",
+    databaseURL: "",
+    projectId: "",
+    storageBucket: "",
+    messagingSenderId: ""
   };
   firebase.initializeApp(config);
 </script>
